# recsim-arena

./: .gitignore  CLAUDE.md  HANDOFF.md  HYPOTHESES.md  README.md  pyproject.toml
analysis/: plot_h1.py  plot_h2.py  plot_h3.py  plot_h4.py
configs/: config.yaml
configs/agent/: ippo.yaml
configs/env/: default.yaml
configs/experiment/: h1_validate.yaml
configs/mechanism/: m0_random.yaml  m1_single.yaml
experiments/: run_h1.py  run_h2.py  run_h3.py  run_h4.py  run_meta.py  smoke_test.py
results/: h3_summary_seed42.json
results/h1_seed0/: config.json  ippo_final.pt  ippo_log.json
results/h1_seed13/: config.json  ippo_final.pt  ippo_log.json
results/h1_seed42/: config.json  grd_log.json  ippo_final.pt  ippo_log.json
results/h1_seed7/: config.json  ippo_final.pt  ippo_log.json
results/h1_seed99/: config.json  ippo_final.pt  ippo_log.json
results/h2_m3_seed0/: config.json  ippo_final.pt  ippo_log.json
results/h2_m3_seed13/: config.json  ippo_final.pt  ippo_log.json
results/h2_m3_seed42/: config.json  ippo_final.pt  ippo_log.json
results/h2_m3_seed7/: config.json  ippo_final.pt  ippo_log.json
results/h2_m3_seed99/: config.json  ippo_final.pt  ippo_log.json
results/h3_temp0.1_seed42/: config.json  ippo_final.pt  ippo_log.json
results/h3_temp0.3_seed42/: config.json  ippo_final.pt  ippo_log.json
results/h3_temp10_seed42/: config.json  ippo_final.pt  ippo_log.json
results/h3_temp1_seed42/: config.json  ippo_final.pt  ippo_log.json
tests/: test_agents.py  test_env.py  test_llm_gate.py  test_mechanisms.py  test_metrics.py  test_user_model.py
(+30 files in other folders)
