[project]
name = "recsim-arena"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "pettingzoo>=1.24",
    "gymnasium>=0.29",
    "faiss-cpu>=1.8",
    "hydra-core>=1.3",
    "wandb>=0.17",
    "anthropic>=0.30",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipython", "jupyterlab"]

[tool.hatch.build.targets.wheel]
packages = ["src/recsys_market"]
